<resources>
    <string name="geemu">Geemu</string>
    <string name="profile">Profile</string>
    <string name="following">Following</string>
    <string name="explore">Explore</string>
    <string name="search_label">Which game would you like\nto check out?</string>
    <string name="genres">Genres</string>
    <string name="rating">Rating</string>
    <string name="release">Release</string>
    <string name="filtered_games">Filtered Games</string>
    <string name="games">Games</string>
    <string name="reviews">Reviews</string>
    <string name="description">Description</string>
    <string name="timeline">Timeline</string>
    <string name="tags">Tags</string>
    <string name="game_details">Game Details</string>
    <string name="genres_distribution">Genres Distribution</string>
    <string name="popular_tags">Popular Tags</string>
    <string name="collection_overview">Collection Overview</string>
    <string name="played">Played</string>
    <string name="completed">Completed</string>
    <string name="not_playing">Not Playing</string>
    <string name="playing">Playing</string>
    <string name="best_of_all_time">Best of All Time</string>
    <string name="no_following">Followed tags will appear here</string>
    <string name="empty_collection">No game added to collection</string>
    <string name="game_description">Game Description</string>
    <string name="available_on_platforms">Available on Platforms</string>

    <!-- No Network Fragment -->
    <string name="no_network_label">No Network Connection</string>
    <string name="no_network_description">Unable to connect to the internet. Please check your network settings and try again.</string>
</resources>