<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RadioGroup
        android:id="@+id/rg_collection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/white_space"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="?android:selectableItemBackground"
            android:layoutDirection="rtl"
            android:text="@string/playing"
            android:textAlignment="textStart"
            android:textFontWeight="600"
            android:textSize="16sp" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="?android:selectableItemBackground"
            android:layoutDirection="rtl"
            android:text="@string/not_playing"
            android:textAlignment="textStart"
            android:textFontWeight="600"
            android:textSize="16sp" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="?android:selectableItemBackground"
            android:layoutDirection="rtl"
            android:text="@string/completed"
            android:textAlignment="textStart"
            android:textFontWeight="600"
            android:textSize="16sp" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="?android:selectableItemBackground"
            android:layoutDirection="rtl"
            android:text="@string/played"
            android:textAlignment="textStart"
            android:textFontWeight="600"
            android:textSize="16sp" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>