<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.following.FollowingFragment">

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow_no_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:constraint_referenced_ids="loading,tv_no_following"
        app:flow_verticalStyle="packed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_no_following"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/no_following"
        android:textAlignment="center"
        android:textColor="@color/grey300"
        android:textFontWeight="700" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loading"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/no_following"
        app:lottie_repeatMode="restart" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/white_space"
        android:layout_marginTop="@dimen/white_space"
        android:text="@string/following"
        android:textColor="@color/grey300"
        android:textFontWeight="600"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <HorizontalScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_label"
        app:layout_constraintVertical_bias="0">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cg_following"
            style="@style/Widget.Material3.ChipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:paddingStart="@dimen/white_space"
            android:paddingEnd="@dimen/white_space"
            app:singleLine="true"
            app:singleSelection="true" />

    </HorizontalScrollView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/white_space"
        android:layout_marginTop="10dp"
        android:text="@string/filtered_games"
        android:textColor="@color/grey300"
        android:textFontWeight="600"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scroll_view"
        app:layout_constraintVertical_bias="0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_following"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:padding="@dimen/white_space"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_following"
        app:layout_constraintVertical_bias="0"
        tools:listitem="@layout/item_card_game3" />

</androidx.constraintlayout.widget.ConstraintLayout>