<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:nestedScrollingEnabled="false"
    android:scrollbars="none"
    tools:context=".presentation.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_collections"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_genres_distribution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/white_space"
            android:layout_marginTop="@dimen/section_margin"
            android:text="@string/genres_distribution"
            android:textColor="@color/grey300"
            android:textFontWeight="600"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_collections"
            app:layout_constraintVertical_bias="0" />

        <com.github.aachartmodel.aainfographics.aachartcreator.AAChartView
            android:id="@+id/chart_genres_distribution"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginStart="@dimen/white_space"
            android:layout_marginTop="@dimen/label_list_gap"
            android:layout_marginEnd="@dimen/white_space"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_genres_distribution"
            app:layout_constraintVertical_bias="0" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_collection_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/white_space"
            android:layout_marginTop="@dimen/section_margin"
            android:text="@string/collection_overview"
            android:textColor="@color/grey300"
            android:textFontWeight="600"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chart_genres_distribution"
            app:layout_constraintVertical_bias="0" />

        <com.github.aachartmodel.aainfographics.aachartcreator.AAChartView
            android:id="@+id/chart_collection_overview"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginStart="@dimen/white_space"
            android:layout_marginTop="@dimen/label_list_gap"
            android:layout_marginEnd="@dimen/white_space"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_collection_overview"
            app:layout_constraintVertical_bias="0" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_popular_tags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/white_space"
            android:layout_marginTop="@dimen/section_margin"
            android:text="@string/popular_tags"
            android:textColor="@color/grey300"
            android:textFontWeight="600"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chart_collection_overview"
            app:layout_constraintVertical_bias="0" />

        <com.github.aachartmodel.aainfographics.aachartcreator.AAChartView
            android:id="@+id/chart_popular_tags"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginStart="@dimen/white_space"
            android:layout_marginTop="@dimen/label_list_gap"
            android:layout_marginEnd="@dimen/white_space"
            android:layout_marginBottom="@dimen/white_space"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_popular_tags"
            app:layout_constraintVertical_bias="0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>